--- a/.github/workflows/provision-s3-static-site.yaml
+++ b/.github/workflows/provision-s3-static-site.yaml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       
+      - name: Using Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: latest
+      
       - name: Set up AWS CLI 
         uses: aws-actions/configure-aws-credentials@v2
         with:
