--- a/.github/workflows/provision-s3-static-site.yaml
+++ b/.github/workflows/provision-s3-static-site.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Using Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: latest
+          node-version: 16.
       
       - name: Set up AWS CLI 
         uses: aws-actions/configure-aws-credentials@v2
